Direct Chat Link

--- a/covid-bot.html
+++ b/covid-bot.html
@@ -739,7 +739,7 @@
 			ready();
 		}
 		function livechat(stateWrapper, ready) {
-			window.open("/livechat.html");
+			window.open("https://tawk.to/chat/5e8fc51835bcbb0c9aaf9b8d/default");
 			ready();
 		}
 
