Live chat embedded

--- a/covid-bot.html
+++ b/covid-bot.html
@@ -280,11 +280,12 @@
 													<option value="no" data-callback="restore">Talk to person wey know well well about coro (COVID 19 Virus)</option>
 												</select>
 												<select name="callbackTest" data-conv-question="Oya choose who you wan follow talk with.">
-													<option value="matthew" data-callback="matthew">Matthew</option>
+													<option value="livechat" data-callback="livechat">Talk with person</option>
+													<!-- <option value="matthew" data-callback="matthew">Matthew</option>
 													<option value="tokunbo" data-callback="tokunbo">Tokunbo</option>
 													<option value="qoyum" data-callback="qoyum">Qoyum</option>
 													<option value="amaka" data-callback="amaka">Amaka</option>
-													<option value="tolulope" data-callback="tolulope">Tolulope</option>
+													<option value="tolulope" data-callback="tolulope">Tolulope</option> -->
 												</select>
 												<select data-conv-question="Shebi you see wetin you find come?">
 													<option value="yes">Naso!</option>
@@ -399,11 +400,12 @@
 												<option value="no" data-callback="restore">Magana da masanin kiwon lafiya</option>
 											</select>
 											<select name="callbackTest" data-conv-question="Za ka/ki zaba daga cikin wa'enan masanin kiwon lafiya a yi magana da sunan.">
-												<option value="matthew" data-callback="matthew">Matthew</option>
+												<option value="livechat" data-callback="livechat">Hira kai tsaye</option>
+												<!-- <option value="matthew" data-callback="matthew">Matthew</option>
 												<option value="tokunbo" data-callback="tokunbo">Tokunbo</option>
 												<option value="qoyum" data-callback="qoyum">Qoyum</option>
 												<option value="amaka" data-callback="amaka">Amaka</option>
-												<option value="tolulope" data-callback="tolulope">Tolulope</option>
+												<option value="tolulope" data-callback="tolulope">Tolulope</option> -->
 											</select>
 											<select data-conv-question="Muna fatan an samu taimakon da ake nema da ga nan?">
 												<option value="yes">Haka ne!</option>
@@ -529,11 +531,12 @@
 												<option value="no" data-callback="restore">Gwa onye ọkachamara ahụike okwu</option>
 											</select>
 											<select name="callbackTest" data-conv-question="i nwere ike ịhọrọ onye ọrụ nlekọta ahụike ọ bụla.">
-												<option value="matthew" data-callback="matthew">Matthew</option>
+												<option value="livechat" data-callback="livechat">Nkata ndụ</option>
+												<!-- <option value="matthew" data-callback="matthew">Matthew</option>
 												<option value="tokunbo" data-callback="tokunbo">Tokunbo</option>
 												<option value="qoyum" data-callback="qoyum">Qoyum</option>
 												<option value="amaka" data-callback="amaka">Amaka</option>
-												<option value="tolulope" data-callback="tolulope">Tolulope</option>
+												<option value="tolulope" data-callback="tolulope">Tolulope</option> -->
 											</select>
 											<select data-conv-question="Atụ anya na ị nwetara enyemaka ịchọrọ?">
 												<option value="yes">Ee!</option>
@@ -657,11 +660,12 @@
 												<option value="no" data-callback="restore">Ba àwon onimon isegun òyìnbó sòrò</option>
 											</select>
 											<select name="callbackTest" data-conv-question="O ni a n fani lati mu eyikeyi ninu àwon onimon isegun òyìnbó wa.">
-												<option value="matthew" data-callback="matthew">Matthew</option>
+												<option value="livechat" data-callback="livechat">Le bèrè ìfòròwérò</option>
+												<!-- <option value="matthew" data-callback="matthew">Matthew</option>
 												<option value="tokunbo" data-callback="tokunbo">Tokunbo</option>
 												<option value="qoyum" data-callback="qoyum">Qoyum</option>
 												<option value="amaka" data-callback="amaka">Amaka</option>
-												<option value="tolulope" data-callback="tolulope">Tolulope</option>
+												<option value="tolulope" data-callback="tolulope">Tolulope</option> -->
 											</select>
 											<select data-conv-question="Mo lero pe o ri ìrànlowo to n fe gba?">
 												<option value="yes">Bẹẹni!</option>
@@ -739,7 +743,7 @@
 			ready();
 		}
 		function livechat(stateWrapper, ready) {
-			window.open("https://tawk.to/chat/5e8fc51835bcbb0c9aaf9b8d/default");
+			window.open("/livechat.html");
 			ready();
 		}
 
