--- a/livechat.html
+++ b/livechat.html
@@ -118,6 +118,9 @@
       </div>
     </div> -->
     <!-- Floating Covid-bot Button ends -->
+    <div class="embed-responsive embed-responsive-1by1" id="hide-desktop"> -->
+      <iframe class="embed-responsive-item" src="https://tawk.to/chat/5e8fc51835bcbb0c9aaf9b8d/default"></iframe> -->
+    </div>
 
     <!--Start of Tawk.to Script-->
         <script type="text/javascript">
