Grammatical errors on bot corrected

--- a/covid-bot.html
+++ b/covid-bot.html
@@ -39,10 +39,10 @@
 									<div data-conv-fork="lang-selector">
 
 	                                    <div data-conv-case="english">
-											<input type="text" name="name" data-conv-question="Great! What is your name" id="fullname">
+											<input type="text" name="name" data-conv-question="Great! What is your name?" id="fullname">
 											<input data-conv-question="Type in your e-mail." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="What's your e-mail?">
 											<input data-conv-question="Type in your phone number (11 digits)." data-pattern="^[0]\d{10}$" id="phone" type="tel"  name="phonenumber" required placeholder="What's your phone number?">
-											<select name="gender" id="gender" data-conv-question="Please select your gender" >
+											<select name="gender" id="gender" data-conv-question="Please select your gender." >
 												<option value="male">Male</option>
 												<option value="female">Female</option>
 											</select>
@@ -80,7 +80,7 @@
 														<option value="1">Yes</option>
 														<option value="0">No</option>
 													</select>	                                    
-													<select name="q5" class="stat" data-conv-question="Are you experiencing MYALGIA (body or muscle aches?">
+													<select name="q5" class="stat" data-conv-question="Are you experiencing MYALGIA - body or muscle aches?">
 														<option value="1">Yes</option>
 														<option value="0">No</option>
 													</select>	                                    
@@ -88,7 +88,7 @@
 														<option value="1">Yes</option>
 														<option value="0">No</option>
 													</select>	                                    
-													<select name="q7" class="stat" data-conv-question="Do you have fever (Temperature 37.8 degree celcius and above)?">
+													<select name="q7" class="stat" data-conv-question="Do you have fever (temperature 37.8 degree celcius and above)?">
 														<option value="1">Yes</option>
 														<option value="0">No</option>
 													</select>
@@ -112,9 +112,9 @@
 														<option value="3" data-callback="rest">Yes</option>
 														<option value="0" data-callback="rest">No</option>
 													</select>
-													<input type="text" data-conv-question="If your test score is below 3, You may be stressed, but just keep observing." data-no-answer="true">
-													<input type="text" data-conv-question="If your test score is between 3-5, Hydrate properly and keep proper personal hygiene. Observe and re-evaluate after 2 days." data-no-answer="true">
-													<input type="text" data-conv-question="If your test score above 5, Seek consultation with a Doctor." data-no-answer="true">
+													<input type="text" data-conv-question="If your test score is below 3, you may be stressed, but just keep observing." data-no-answer="true">
+													<input type="text" data-conv-question="If your test score is between 3-5, hydrate properly and keep proper personal hygiene. Observe and re-evaluate after 2 days." data-no-answer="true">
+													<input type="text" data-conv-question="If your test score above 5, seek consultation with a Doctor." data-no-answer="true">
 													
 												</div>
 
@@ -176,9 +176,9 @@
 											<input type="text" id="username" name="name" data-conv-question="Oya! make you hep me with your name.">
 											<input data-conv-question="Put your e-mail." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Na wetin be your e-mail?">
 											<input data-conv-question="Put your phone number (number wey reach 11)." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Wetin be your phone number?">
-											<select name="gender" id="gender" data-conv-question="Wetin be your gender" >
-												<option value="male">You be bobo</option>
-												<option value="female">or babe</option>
+											<select name="gender" id="gender" data-conv-question="Wetin be your gender?" >
+												<option value="male">bobo</option>
+												<option value="female">babe</option>
 											</select>
 											<input data-conv-question="How many years you dey?" type="number" id="age"  name="age" required placeholder="How many years you dey?">
 
@@ -223,7 +223,7 @@
 														<option value="1">Yes o</option>
 														<option value="0">No o</option>
 													</select>	                                    
-													<select name="q7" class="stat" data-conv-question="Abi you dey get fever (From Temperature 37.8 degree celcius dey go up)?">
+													<select name="q7" class="stat" data-conv-question="Abi you dey get fever (from Temperature 37.8 degree celcius dey go up)?">
 														<option value="1">Yes o</option>
 														<option value="0">No o</option>
 													</select>
@@ -492,7 +492,7 @@
 														<option value="0" data-callback="rest">Mba</option>
 
 													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị n'agbata akara efu rue akara ato, o gosiri n'ahu gi choro ezumike, n'atulee onwe gi." data-no-answer="true">
-													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị n'agbata akara ato n'akara ise, N'anu mmiri nke oma.ma n'edebe onwe gi ocha nkeoma. Tulee onwe gi ma izu abuo ga-chaa." data-no-answer="true">
+													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị n'agbata akara ato n'akara ise, n'anu mmiri nke oma.ma n'edebe onwe gi ocha nkeoma. Tulee onwe gi ma izu abuo ga-chaa." data-no-answer="true">
 													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị karịri akara ise, chọwa onye okachamara ahuike." data-no-answer="true">
 													
 												</div>
@@ -555,7 +555,7 @@
 												<option value="male">Ọkunrin</option>
 												<option value="female">Obinrin</option>
 											</select>
-											<input data-conv-question="Tẹ ni ọjọ-ori rẹ" type="number" id="age"  name="age" required placeholder="Kini ọjọ-ori rẹ?">
+											<input data-conv-question="Tẹ ni ọjọ-ori rẹ?" type="number" id="age"  name="age" required placeholder="Kini ọjọ-ori rẹ?">
 											<!-- (note that this question doesn't expect any answer) -->
 											<input type="text" data-conv-question="Kaabọ, {name}:0! &#128515 Inú mi dun lati rí o." data-no-answer="true">
 											<!-- answer needed -->
