--- a/covid-bot.html
+++ b/covid-bot.html
@@ -108,7 +108,7 @@
 														<option value="3">Yes</option>
 														<option value="0">No</option>
 													</select>
-													<select name="q12" class="stat" id="submitButton" onchange="submitQuiz()" data-conv-question="Do you have direct contact or is taking care of a positive COVID-19 patient?">
+													<select name="q12" class="stat" id="submitButton" onchange="submitQuiz()" data-conv-question="Did you have direct contact with or are you taking care of a COVID-19 patient?">
 														<option value="3" data-callback="rest">Yes</option>
 														<option value="0" data-callback="rest">No</option>
 													</select>
