Map Marquee added

--- a/index.html
+++ b/index.html
@@ -122,13 +122,52 @@
           <!-- <div class="embed-responsive embed-responsive-21by9" id="hide-wall"> -->
 
             <small>Click on States to zoom in </small>
+            <marquee behavior="scroll" style="font-family:Arial, sans-serif; font-size: 15px;  background-color: black; color: white;" direction="left" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()">
+              <a id="lagos" ></a><span id="lagosCases"></span> 
+              <a id="fct" ></a><span id="fctCases"></span> 
+              <a id="abia" ></a><span id="abiaCases"></span>
+              <a id="adamawa" ></a><span id="adamawaCases"></span>
+              <a id="akwa" ></a><span id="akwaCases"></span>
+              <a id="anambra" ></a><span id="anambraCases"></span>
+              <a id="bauchi" ></a><span id="bauchiCases"></span>
+              <a id="bayelsa" ></a><span id="bayelsaCases"></span>
+              <a id="benue" ></a><span id="benueCases"></span> 
+              <a id="borno" ></a><span id="bornoCases"></span> 
+              <a id="cross" ></a><span id="crossCases"></span> 
+              <a id="delta" ></a><span id="deltaCases"></span> 
+              <a id="ebonyi" ></a><span id="ebonyiCases"></span>
+              <a id="edo" ></a><span id="edoCases"></span>
+              <a id="ekiti" ></a><span id="ekitiCases"></span> 
+              <a id="enugu" ></a><span id="enuguCases"></span> 
+              <a id="gombe" ></a><span id="gombeCases"></span> 
+              <a id="imo" ></a><span id="imoCases"></span>
+              <a id="jigawa" ></a><span id="jigawaCases"></span> 
+              <a id="kaduna" ></a><span id="kadunaCases"></span> 
+              <a id="kano" ></a><span id="kanoCases"></span>
+              <a id="katsina" ></a><span id="katsinaCases"></span> 
+              <a id="kebbi" ></a><span id="kebbiCases"></span>
+              <a id="kogi" ></a><span id="kogiCases"></span>
+              <a id="kwara" ></a><span id="kwaraCases"></span> 
+              <a id="nassarawa" ></a><span id="nassarawaCases"></span>
+              <a id="niger" ></a><span id="nigerCases"></span> 
+              <a id="ogun" ></a><span id="ogunCases"></span> 
+              <a id="ondo" ></a><span id="ondoCases"></span> 
+              <a id="osun" ></a><span id="osunCases"></span>
+              <a id="oyo" ></a><span id="oyoCases"></span>
+              <a id="plateau" ></a><span id="plateauCases"></span>
+              <a id="rivers" ></a><span id="riversCases"></span>
+              <a id="sokoto" ></a><span id="sokotoCases"></span> 
+              <a id="taraba" ></a><span id="tarabaCases"></span> 
+              <a id="yobe" ></a><span id="yobeCases"></span> 
+              <a id="zamfara" ></a><span id="zamfaraCases"></span>
+            </marquee>
 
             <div id='map'>
               <nav id="menu"></nav>
             </div>
             <div class='controlcontainer' style="padding: 1em;">
               <h6>Day: <label id='active-day'>40 : 6/Mar/2020</label></h6>
-              <input id='slider' class='row' type='range' min='1' max='41' step='1' value='40'/>
+              <input id='slider' class='row' type='range' min='1' max='50' step='1' value='40'/>
             </div>
             <!-- <iframe class="embed-responsive-item" src="https://datawrapper.dwcdn.net/IBJXY/8/"></iframe> -->
           <!-- </div> -->
