--- a/livechat.html
+++ b/livechat.html
@@ -57,14 +57,14 @@
       </nav>
     </div>
     
-    <div class="container-fluid front" id="hide-wall">
+    <!-- <div class="container-fluid front" id="hide-wall">
         <div class="row">
             <div class="jumbotron text-center innerJumbo" style="background-color: black;">
                 <h2 class="switHead">COVID-19 - Symptoms</h2>
                 <p class="text-center switHeadSub"> <em>Do not panic - Stay at home, Stay safe</em></p>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- <div class="container-fluid" id="cases" style="margin: 0em;">
         <div class="row">
@@ -118,7 +118,7 @@
       </div>
     </div> -->
     <!-- Floating Covid-bot Button ends -->
-    <div class="embed-responsive embed-responsive-1by1" id="hide-desktop"> -->
+    <div class="embed-responsive embed-responsive-1by1">
       <iframe class="embed-responsive-item" src="https://tawk.to/chat/5e8fc51835bcbb0c9aaf9b8d/default"></iframe> -->
     </div>
 
