Alerts added, First handwash campaign modal removed. Number collection consent added

--- a/covid-bot.html
+++ b/covid-bot.html
@@ -41,7 +41,7 @@
 	                                    <div data-conv-case="english">
 											<input type="text" name="name" data-conv-question="Great! What is your name?" id="fullname">
 											<input data-conv-question="Type in your e-mail." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="What's your e-mail?">
-											<input data-conv-question="Type in your phone number (11 digits)." data-pattern="^[0]\d{10}$" id="phone" type="tel"  name="phonenumber" required placeholder="What's your phone number?">
+											<input data-conv-question="Type in your phone number (11 digits). NB: To send in updates and reminders with regards to any development relating to the virus." data-pattern="^[0]\d{10}$" id="phone" type="tel"  name="phonenumber" required placeholder="What's your phone number?">
 											<select name="gender" id="gender" data-conv-question="Please select your gender." >
 												<option value="male">Male</option>
 												<option value="female">Female</option>
@@ -175,7 +175,7 @@
 										<div data-conv-case="pidgin">
 											<input type="text" id="username" name="name" data-conv-question="Oya! make you hep me with your name.">
 											<input data-conv-question="Put your e-mail." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Na wetin be your e-mail?">
-											<input data-conv-question="Put your phone number (number wey reach 11)." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Wetin be your phone number?">
+											<input data-conv-question="Put your phone number (number wey reach 11). NB: We dey collect your number so that we go fit dey send you correct message about this virus." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Wetin be your phone number?">
 											<select name="gender" id="gender" data-conv-question="Wetin be your gender?" >
 												<option value="male">bobo</option>
 												<option value="female">babe</option>
@@ -299,7 +299,7 @@
 										<div data-conv-case="hausa">
 											<input type="text" id="username" name="name" data-conv-question="Babban! Rubuta sunan ka/ki anan.">
 											<input data-conv-question="Rubuta wasikar lantarkin ka/ki anan." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Menene imel?">
-											<input data-conv-question="Rubuta lambar wayan ka/ki anan (lambobi goma sha ɗaya)." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Menene lambar wayar ku?">
+											<input data-conv-question="Rubuta lambar wayan ka/ki anan (lambobi goma sha ɗaya). NB: Don aikawa cikin ɗaukakawa da tunatarwa tare da yin la'akari da duk wani ci gaba da ya shafi ƙwayar cuta." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Menene lambar wayar ku?">
 											<select name="gender" id="gender" data-conv-question="Kai na miji ne ko na mace?" >
 												<option value="male">Namiji</option>
 												<option value="female">Mace</option>
@@ -420,7 +420,7 @@
 										<div data-conv-case="igbo">
 											<input type="text" id="username" name="name" data-conv-question="Daalu! Buru ụzọ gwa m aha gị, biko.|Ọ dị mma! Biko, buru ụzọ gwa m aha gị.">
 											<input data-conv-question="Pịnye e-mail gị." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Kedu ihe bụ email gị?">
-											<input data-conv-question="Pịnye akara ekwentị gị (nọmba iri na otu)." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Kedu nọmba ekwentị gị?">
+											<input data-conv-question="Pịnye akara ekwentị gị (nọmba iri na otu). NB: Ka izipu mmelite na ncheta banyere mmepe ọ bụla metụtara nje a." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Kedu nọmba ekwentị gị?">
 											<select name="gender" id="gender" data-conv-question="Biko i bu nwoke ka i bu nwanyi?" >
 												<option value="male">Nwoke</option>
 												<option value="female">Nwanyi</option>
@@ -550,7 +550,7 @@
 										<div data-conv-case="yoruba">
 											<input type="text" id="username" name="name" data-conv-question="O daa! jòó,  kíni orúko re?">
 											<input data-conv-question="Te àdírèsì email re." data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Kini imeeli rẹ?">
-											<input data-conv-question="Te nómbà èro alágbeka re (awọn nọmba mọkanla)." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Kini nọmba foonu rẹ?">
+											<input data-conv-question="Te nómbà èro alágbeka re (awọn nọmba mọkanla). NB: Lati firanṣẹ ni awọn imudojuiwọn ati awọn olurannileti pẹlu n ṣakiyesi si eyikeyi idagbasoke ti o jọmọ ọlọjẹ naa." data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Kini nọmba foonu rẹ?">
 											<select name="gender" id="gender" data-conv-question="Jòó, okùnrin ni ó abí obìnrin?" >
 												<option value="male">Ọkunrin</option>
 												<option value="female">Obinrin</option>
