--- a/diagnosis.html
+++ b/diagnosis.html
@@ -32,16 +32,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cases">Cases</a>
+              <a class="nav-link" href="/prevention.html">Prevention</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#response">Response</a>
+              <a class="nav-link" href="/symptoms.html">Symptoms</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#psd">Covid</a>
+                <a class="nav-link" href="#">Diagnosis</a>
               </li>
           </ul>
         </div>
