--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#cases">Cases</a>
+                <a class="nav-link" href="/prevention.html">Prevention</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#worldmap">Response</a>
+                <a class="nav-link" href="/symptoms.html">Symptoms</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#psd">Covid</a>
+                <a class="nav-link" href="/diagnosis.html">Diagnosis</a>
               </li>
             </ul>
           </div>
