--- a/prevention.html
+++ b/prevention.html
@@ -35,13 +35,13 @@
               <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cases">Cases</a>
+              <a class="nav-link" href="#">Prevention</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#response">Response</a>
+              <a class="nav-link" href="/symptoms.html">Symptoms</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#psd">Covid</a>
+                <a class="nav-link" href="/diagnosis.html">Diagnosis</a>
               </li>
           </ul>
         </div>
